--- a/package.json
+++ b/package.json
@@ -1,8 +1,15 @@
 {
   "name": "mcp-azd-template",
   "version": "1.0.0",
-  "type": "module",
+  "description": "MCP server for Azure Developer CLI template operations",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "bin": {
+    "mcp-azd-template": "dist/cli.js"
+  },
+  "files": [
+    "dist"
+  ],  
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
@@ -10,17 +17,26 @@
     "watch": "tsc -w & node dist/index.js",
     "clean": "rimraf dist",
     "prebuild": "npm run clean",
-    "prepare": "npm run build"
+    "prepare": "npm run build",
+    "prepublishOnly": "npm run build",
+    "test": "node dist/test.js"
   },
   "keywords": [
     "azd",
     "azure",
     "template",
-    "mcp"
+    "mcp",
+    "model-context-protocol"
   ],
-  "author": "",
-  "license": "ISC",
-  "description": "MCP server for Azure Developer CLI template assistance",
+  "author": "Shayne Boyer",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/username/mcp-azd-template"
+  },
+  "engines": {
+    "node": ">=18"
+  },
   "devDependencies": {
     "@modelcontextprotocol/sdk": "^1.8.0",
     "@types/node": "^22.13.14",
@@ -30,5 +46,9 @@
   },
   "dependencies": {
     "yaml": "^2.7.0"
+  },
+  "peerDependencies": {
+    "@modelcontextprotocol/sdk": "^1.8.0",
+    "zod": "^3.24.2"
   }
 }
