--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -19,6 +19,16 @@ jobs:
       - name: Install dependencies
         run: npm ci
       
+      - name: Update version from release tag
+        run: |
+          # Extract version from tag (remove 'v' prefix if present)
+          VERSION="${{ github.event.release.tag_name }}"
+          VERSION=${VERSION#v}
+          
+          # Update package.json version to match release tag
+          npm version $VERSION --no-git-tag-version
+          echo "Updated package.json to version $VERSION"
+      
       - name: Update CHANGELOG.md
         run: |
           # Extract version from tag (remove 'v' prefix if present)
@@ -46,7 +56,8 @@ jobs:
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git add CHANGELOG.md
-          git commit -m "Update CHANGELOG.md for release ${{ github.event.release.tag_name }}" || echo "No changes to commit"
+          git add package.json
+          git commit -m "Update CHANGELOG.md and package.json for release ${{ github.event.release.tag_name }}" || echo "No changes to commit"
           git push
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
