--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "prebuild": "npm run clean",
     "prepare": "npm run build",
     "prepublishOnly": "npm run build",
-    "test": "node dist/test.js"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "keywords": [
     "azd",
@@ -39,8 +41,11 @@
   },
   "devDependencies": {
     "@modelcontextprotocol/sdk": "^1.8.0",
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.13.14",
+    "jest": "^29.7.0",
     "rimraf": "^5.0.1",
+    "ts-jest": "^29.3.1",
     "typescript": "^5.8.2",
     "zod": "^3.24.2"
   },
