--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
       
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -24,6 +26,24 @@ jobs:
       
       - name: Install dependencies
         run: npm ci
+      
+      # Only run lint if script exists, otherwise suggest adding it
+      - name: Check if lint script exists
+        id: check_lint
+        run: |
+          if grep -q "\"lint\":" package.json; then
+            echo "HAS_LINT=true" >> $GITHUB_OUTPUT
+          else
+            echo "HAS_LINT=false" >> $GITHUB_OUTPUT
+          fi
+      
+      - name: Lint code
+        if: steps.check_lint.outputs.HAS_LINT == 'true'
+        run: npm run lint
+        
+      - name: Suggest adding linting
+        if: steps.check_lint.outputs.HAS_LINT == 'false'
+        run: echo "Consider adding ESLint to your project with a 'lint' script in package.json for better code quality"
       
       - name: Build
         run: npm run build
