--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mcp-azd-template",
-  "version": "1.3.1",
+  "version": "1.3.2",
   "description": "MCP server for Azure Developer CLI template operations",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -9,7 +9,7 @@
   },
   "files": [
     "dist"
-  ],  
+  ],
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
@@ -42,6 +42,7 @@
   "devDependencies": {
     "@modelcontextprotocol/sdk": "^1.8.0",
     "@types/jest": "^29.5.14",
+    "@types/js-yaml": "^4.0.9",
     "@types/node": "^22.13.14",
     "jest": "^29.7.0",
     "rimraf": "^5.0.1",
