--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,6 +26,9 @@ jobs:
       
       - name: Install dependencies
         run: npm ci
+
+      - name: Install dependencies
+        run: npm install
       
       # Only run lint if script exists, otherwise suggest adding it
       - name: Check if lint script exists
