--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mcp-azd-template",
-  "version": "1.3.1",
+  "version": "1.3.2",
   "description": "MCP server for Azure Developer CLI template operations",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -42,6 +42,7 @@
   "devDependencies": {
     "@modelcontextprotocol/sdk": "^1.8.0",
     "@types/jest": "^29.5.14",
+    "@types/js-yaml": "^4.0.9",
     "@types/node": "^22.13.14",
     "jest": "^29.7.0",
     "rimraf": "^5.0.1",
@@ -50,6 +51,7 @@
     "zod": "^3.24.2"
   },
   "dependencies": {
+    "js-yaml": "^4.1.0",
     "yaml": "^2.7.0"
   },
   "peerDependencies": {
