--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -21,7 +21,12 @@ jobs:
           cache: 'npm'
       
       - name: Install dependencies
-        run: npm ci
+        run: |
+          if [ -f package-lock.json ] || [ -f yarn.lock ]; then
+            npm ci
+          else
+            npm install
+          fi
       
       # Only run lint if script exists, otherwise suggest adding it
       - name: Check if lint script exists
