Enhance README.md handling in validation workflow and template validation logic
- Added support for case-insensitive README.md checks in the validation workflow.
- Implemented symlink creation for lowercase readme.md on Unix-like systems and file copy on Windows.
- Improved error messaging for missing README.md file.

--- a/src/github-workflow-templates/validate-azd-template.yml
+++ b/src/github-workflow-templates/validate-azd-template.yml
@@ -1,3 +1,4 @@
+# filepath: c:\github\mcp\mcp-azd-template\src\github-workflow-templates\validate-azd-template.yml
 name: Validate Azure Developer CLI Template
 
 on:
@@ -6,6 +7,7 @@ on:
   pull_request:
     branches: [ main ]
   workflow_dispatch:
+    # Additional inputs for manual runs can be defined here if needed
 
 jobs:
   validate:
@@ -19,34 +21,54 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '18'
-          cache: 'npm'
 
       - name: Install Azure Developer CLI
         run: |
           curl -fsSL https://aka.ms/install-azd.sh | bash
 
       - name: Install mcp-azd-template
-        run: npm install -g mcp-azd-template      # Run validation and capture the output for potential issue creation
+        run: npm install -g mcp-azd-template
+
+      - name: Handle README.md Case Sensitivity
+        run: |
+          # Debug: List files in the workspace to verify what's available
+          echo "Files in repository root:"
+          ls -la "${{ github.workspace }}"
+          
+          # Check if readme.md exists (case-insensitive check)
+          if [ -f "${{ github.workspace }}/readme.md" ] && [ ! -f "${{ github.workspace }}/README.md" ]; then
+            echo "Found lowercase readme.md, creating symlink to README.md for case-sensitive validation"
+            ln -s "${{ github.workspace }}/readme.md" "${{ github.workspace }}/README.md"
+          fi
+
       - name: Validate AZD Template and Capture Output
         id: validate
         run: |
-          # Run validation and capture output to a file
+          # Run validation and save output to a file
+          set +e  # Don't exit on error
+          echo "Running validation on path: ${{ github.workspace }}"
           mcp-azd-template validate-action "${{ github.workspace }}" > validation_output.txt 2>&1
+          EXIT_CODE=$?
           
-          # Check if the validation failed
-          if [ $? -ne 0 ]; then
+          # Always display the output for better debugging (useful for workflow_dispatch runs)
+          echo "Validation output:"
+          cat validation_output.txt
+          
+          # Set the status based on exit code
+          if [ $EXIT_CODE -ne 0 ]; then
+            echo "Validation failed with exit code: $EXIT_CODE"
             echo "status=failed" >> $GITHUB_OUTPUT
-            cat validation_output.txt
           else
+            echo "Validation succeeded!"
             echo "status=success" >> $GITHUB_OUTPUT
           fi
         continue-on-error: true
-        # Pass the GitHub token to allow issue creation if enabled
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            # Create issue with detailed validation results when validation fails
+
+      # Create issue with detailed validation results when validation fails
       - name: Create Issue with Validation Results
-        if: ${{ steps.validate.outputs.status == 'failed' && github.event_name == 'push' }}
+        if: ${{ steps.validate.outputs.status == 'failed' && (github.event_name == 'push' || github.event_name == 'workflow_dispatch') }}
         uses: actions/github-script@v6
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
@@ -67,22 +89,45 @@ jobs:
             
             const criticalIssues = criticalIssuesMatch ? criticalIssuesMatch[1].trim() : '';
             const warnings = warningsMatch ? warningsMatch[1].trim() : '';
-            
-            // Build issue body with proper escaping for YAML
+              // Build issue body with improved Markdown formatting
             let issueBody = `# Template Validation Failed\n\n`;
-            issueBody += `Template validation found issues in commit ${context.sha.substring(0, 7)}.\n\n`;
+            issueBody += `📝 Template validation found issues in commit \`${context.sha.substring(0, 7)}\`.\n\n`;
             issueBody += `## Validation Results\n\n`;
             
             if (criticalIssues) {
-              issueBody += `### Critical Issues\n${criticalIssues}\n\n`;
+              // Format critical issues with proper bullet points and code formatting
+              const formattedCriticalIssues = criticalIssues
+                .split('\n')
+                .map(line => {
+                  if (line.trim().startsWith('-')) {
+                    // Format each bullet point with better spacing and emphasis
+                    return line.replace(/^- (.+)$/, '- **$1**');
+                  }
+                  return line;
+                })
+                .join('\n');
+              
+              issueBody += `### ❌ Critical Issues\n${formattedCriticalIssues}\n\n`;
             }
             
             if (warnings) {
-              issueBody += `### Warnings and Recommendations\n${warnings}\n\n`;
+              // Format warnings with proper bullet points and code formatting
+              const formattedWarnings = warnings
+                .split('\n')
+                .map(line => {
+                  if (line.trim().startsWith('-')) {
+                    // Format each bullet point with code highlighting where appropriate
+                    return line.replace(/^- (.+?)(\s+in\s+|\s+for\s+)(.+)$/, '- $1$2`$3`');
+                  }
+                  return line;
+                })
+                .join('\n');
+              
+              issueBody += `### ⚠️ Warnings and Recommendations\n${formattedWarnings}\n\n`;
             }
             
             issueBody += `<details>\n<summary>Full Validation Output</summary>\n\n\`\`\`\n${validationOutput}\n\`\`\`\n\n</details>\n\n`;
-            issueBody += `Please address these issues before merging. For more information, see the [workflow run](${context.serverUrl}/${context.repo.owner}/${context.repo.repo}/actions/runs/${context.runId}).`;
+            issueBody += `---\n\n📌 Please address these issues before merging. For more information, see the [workflow run](${context.serverUrl}/${context.repo.owner}/${context.repo.repo}/actions/runs/${context.runId}).`;
             
             // Create issue with formatted validation results
             await github.rest.issues.create({
@@ -90,5 +135,4 @@ jobs:
               repo: context.repo.repo,
               title: 'AZD Template Validation Failed',
               body: issueBody
-            });
             });
