Add Mermaid diagram rendering service and tests
- Implemented `renderMermaidToPng` function in `mermaid-renderer.ts` for generating PNG images from Mermaid diagrams.
- Added error handling for directory creation and file copying.
- Created unit tests for the rendering service in `mermaid-renderer.test.ts`, covering scenarios for directory creation, existing file copying, error handling, and fallback PNG generation.
- Included sample Mermaid diagrams and placeholder images in the `test-diagram` directory for testing purposes.
- Added documentation and example Markdown files to demonstrate the usage of Mermaid diagrams.

--- a/.gitignore
+++ b/.gitignore
@@ -49,6 +49,21 @@ lerna-debug.log*
 Thumbs.db
 
 # Temporary files
+.temp/
+**/mermaid-*/
+*.mmd
+test-output.txt
+function-test-output.txt
+diagram-coverage.txt
+
+# Generated diagrams (except base templates)
+test-diagram/images/architecture-diagram-*.png
+test-diagram/images/architecture-diagram-*.mmd
+test-output/
+
+# Keep template files
+!diagram.png
+!test-diagram.mmd
 tmp/
 temp/
 
